Fixed some spacing bugs

--- a/Front End/css/maze_runner.css
+++ b/Front End/css/maze_runner.css
@@ -30,10 +30,13 @@ body{
 }
 
 .btn {
-  width:90px;
   height:27px;
+  width:25%;
 }
 
+.game_btn.btn{
+    width:75%;
+}
 ul{
 	list-style:none; 
 	display:table; 
@@ -42,7 +45,9 @@ ul{
 }
 
 	ul li{
+        text-align:center;
 		display: table-cell;
+        width:20%;
 	}
 
 /*************** Header design ***************/
